--- a/dashboard/views/includes/footer.ejs
+++ b/dashboard/views/includes/footer.ejs
@@ -4,6 +4,6 @@
   </div>
   <strong
     >This website uses <a href="https://adminlte.io">AdminLTE</a> and <a href="https://boostrap.com">Bootstrap</a>. Made
-    with <i class="fa fa-heart"></i> by <a target="_blank" href="https://github.com/Androz2091">Androz2091</a>.</strong
+    with <i class="fa fa-heart"></i> by <a target="_blank" href="https://vanshdhillon.ml">Van.sh07</a>.</strong
   >
 </footer>
